# circle-of-fifths

./: .gitignore  Cargo.toml  README.md  amplify.yml  index.css  index.html
.kiro/specs/auto-playback-toggle/: design.md  requirements.md  tasks.md
.kiro/specs/cancellable-playback/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/circle-of-fifths/: design.md  requirements.md  tasks.md
.kiro/specs/custom-progression-builder/: design.md  requirements.md  tasks.md
.kiro/specs/metronome-time-signature/: design.md  requirements.md  tasks.md
.kiro/specs/midi-keyboard-integration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/piano-chord-highlight-sync/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/play-along-redesign/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/remove-practice-mode/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/remove-quiz-mode/: .config.kiro  bugfix.md  design.md  tasks.md
src/: lib.rs
src/audio/: mod.rs  tests.rs
src/components/: app.rs  circle_view.rs  custom_progression_builder.rs  key_info_panel.rs  midi_status_bar.rs  mod.rs  nav_bar.rs  piano_panel.rs  play_along_panel.rs  practice_panel.rs  progression_panel.rs  quiz_panel.rs
src/data/: mod.rs  tests.rs
src/midi/: mod.rs  tests.rs
src/music_theory/: mod.rs  tests.rs
src/state/: mod.rs
src/storage/: mod.rs
